...

@Composable
fun BottomNavBar(userRole: UserRole,
                 navController: NavController) {
    NavigationBar(
        modifier = Modifier.semantics {
            contentDescription = "bottom navigation bar"
        },
        containerColor = Color.White,
        contentColor = Color.Black
    ) {
        val navBackStackEntry by navController.currentBackStackEntryAsState()
        val currentDestination = navBackStackEntry?.destination
...
